Overflow bug fix

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body {
   line-height: 1.7;
   color: #828282;
   background: #fff;
+  overflow-x: hidden;
 }
 
 .footer #trophyImage {
